# ewaf-python

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/ewaf/: __init__.py  __main__.py
